--- a/index.html
+++ b/index.html
@@ -13,26 +13,32 @@
       Choose between Linear and Polynomial Regression and cleack on the canvus
     </p>
     <div class="radio-container">
-      <label for=""><input
-        type="radio"
-        name="regressionType"
-        value="Linear"
-        checked
-      />Linear</label>
-     <label ><input
-        type="radio"
-        name="regressionType"
-        value="Polynomial"
-      />Polynomial</label> 
+      <label
+        ><input
+          type="radio"
+          name="regressionType"
+          value="Linear"
+          id="linear"
+          checked
+        />Linear</label
+      >
+      <label
+        ><input
+          type="radio"
+          name="regressionType"
+          value="Polynomial"
+        />Polynomial</label
+      >
     </div>
 
     <p>
       Using Tensorflowjs the line will be moved for the best fit ef the points
       you have clicked
     </p>
+    <p>The learning rate is high so it chan flicker and change dramatically</p>
     <div id="sketch-holder"></div>
     <div class="button-container">
-      <button>Undo</button> <button>Clear</button>
+      <button id="clear">Clear</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
